tests/should_fail/bug/2042.stderr
error: Cannot make `"S::0"` transparent in `"S::get"` as it would call a less-visible item.
 --> 2042.rs:6:5
  |
6 |     #[logic(open)]
  |     ^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `logic` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

